feat(mvc): dashboard with all user locations weather

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,3 +1,7 @@
 <div>
-    Logged in!
+    Welcome, {{userEmail}}!
+
+    Here's your weather data:
+
+    {{> weather-list dataSource=weather}}
 </div>
