--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,21 +1,14 @@
 <div class="container">
-    <div class="row">
-        <div class="col">
-            Welcome, {{userEmail}}!
-        </div>
-        <div class="col-auto"></div>
-        <div class="col">
-            <a href="/logout" role="button" class="btn btn-danger">
-                Logout
-            </a>
-        </div>
+    <div class="d-flex justify-content-between">
+        <h3>Welcome, {{userEmail}}!</h3>
+        <a href="/logout" role="button" class="btn btn-danger">Logout</a>
     </div>
     <div class="row">
         <div class="col"></div>
         <div class="col-auto">
-            <div class="row">
+            <h4 class="row">
                 Here's your weather data:
-            </div>
+            </h4>
             <div class="row">
                 {{> weather-list dataSource=weather}}
             </div>
