--- a/src/views/partials/weather-list.hbs
+++ b/src/views/partials/weather-list.hbs
@@ -1,6 +1,6 @@
-<ul>
+<ul class="list-group list-group-flush">
     {{#each dataSource}}
-        <li>
+        <li class="list-group-item">
             {{> weather-card this}}
         </li>
     {{/each}}
